fix alignment style

--- a/src/index.css
+++ b/src/index.css
@@ -336,6 +336,7 @@ img {
   /*color: hsl(216 63% 50% / 1);*/
 }
 .job-item__info {
+  flex: 1;
 }
 .job-item__title {
   font-weight: 600;
@@ -346,7 +347,7 @@ img {
 .job-item__col {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
 }
 .job-item__bookmark {
 }
